k8s-cronJob/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: myapp
  labels:
    app: task
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
      component: frontend
  template:
    metadata:
      labels:
        app: task
        component: frontend
    spec:
      containers:
        - name: frontend
          image: prashidha333/workshop-frontend:latest
          #imagePullPolicy: Never
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '256Mi'
