k8s-cronJob/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: myapp
  labels:
    app: task
    component: backend
spec:
  selector:
    app: task
    component: backend
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
