k8s-cronJob/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: myapp
  labels:
    app: task
    component: frontend
spec:
  type: NodePort
  selector:
    app: task
    component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
