k8s-cronJob/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: myapp
  labels:
    app: task
    component: database

spec:
  type: ClusterIP
  selector:
    app: task
    component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
